# WaterCore

./: .env.example  .gitignore  LICENSE  README.md  dependencies.txt  projectDescription.txt  pyproject.toml  resources.txt  risk.py  todo.txt
backend/app/: main.py
backend/app/api/routes/: flood.py  health.py  risk.py
backend/app/core/: config.py  scheduler.py
backend/app/models/: schemas.py
backend/app/services/: area_tracking.py  data_sources.py  notifications.py  real_time_detection.py
backend/tests/: test_health.py
data/: alert_events.jsonl  sample_risk_input.json  tracked_areas.jsonl
frontend/: app.js  index.html  styles.css
notebooks/: notes.md  risk_assesment.ipynb
watercore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
