[project]
name = "watercore"
version = "0.1.0"
description = "Hackathon scaffolding for disaster risk intelligence software"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "shapely>=2.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["backend/tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
